# psci2075sp23.classes.damoncroberts.com

./: .bashrc  .gitattributes  .gitignore  01_setup.qmd  03_run_code.qmd  04_quarto.qmd  05_r_syntax_basics.qmd  _publish.yml  _quarto.yml  handout.qmd  index.qmd  pyproject.toml  readme.md  references.bib  requirements.txt
_book/: 01_setup.html  02_anatomy.html  03_run_code.html  04_quarto.html  05_r_syntax_basics.html  06_loading_data.html  404.html  handout.html  index.html  references.html  search.json
assets/: PSCI_2075_v2.1.RData  custom.scss  references.bib
docs/: 01_setup.qmd  02_anatomy.qmd  03_file_structure.qmd  03_run_code.qmd  04_quarto.qmd  04_run_code.qmd  05_quarto.qmd  05_r_syntax_basics.qmd  06_loading_data.qmd  06_r_syntax_basics.qmd  07_loading_data.qmd  08_summarizing_data.qmd  09_simple_data_cleaning.qmd  10_simple_bivariate_analyses.qmd  11_group_assignment_one.qmd  12_bivariate_expectations.qmd  13_bivariate_regression.html  13_bivariate_regression.qmd  14_multivariate_regression.qmd  15_dichotomous_iv.qmd  16_interactions.qmd  17_midterm_review.qmd  18_population_distribution.qmd  19_sample_distribution.qmd  20_sampling_distributions.qmd  21_inference_and_confidence_intervals.qmd  22_areas_for_improvement.qmd  22_post-estimation_diagnostics.qmd  23_logits.qmd  23_post-estimation_diagnostics.qmd  24_closing_exercise.qmd  24_logits.qmd  handout.qmd  helper.py  inference_data.py  outline.html  outline.qmd  population_distribution.ipynb  population_distribution.qmd  sample_distribution.qmd  (+2 more)
examples/: bivariate_regression.R  inference_and_cis.r  (+10 more)
(+55 files in other folders)
