[tool.poetry]
name = "sp23 psci 2075"
version = "0.1.0"
description = "Teaching materials for PSCI 2075, Spring 2023"
authors = ["Damon C. Roberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
ipywidgets = "^8.0.4"
plotly = "^5.13.1"
numpy = "^1.24.2"
jupyter = "^1.0.0"
nbformat = "^5.7.3"
ipykernel = "^6.21.3"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
